--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <include src="./partials/site-header.html"></include>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
     <include src="./partials/site-footer.html"></include>
