--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,18 @@
     />
   </head>
   <body>
+    <section>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
     <include src="./partials/site-header.html"></include>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
